--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -12,7 +12,7 @@
     background-image: url("fotohome1.jpg");
     background-size: 1380px;
     opacity: 0.9;
-    height: 660px;
+    height: 677px;
     width: 1280px;
     margin-left: -38px;
     margin-top: -17px;
@@ -26,11 +26,14 @@
     justify-content: center;
     align-items: center;
     font-size: 30px;
-    margin-top: 380px;
-    background-color: #181a1f;
+    margin-top: 300px;
+    background-color: #145712;
     border-radius: 20px;
     background-position-x: right;
-    color: aliceblue;
+    border: 30px;
+    border-color: rgb(248, 248, 248);
+
+
 
 
 }
@@ -38,12 +41,16 @@
 .tombol {
     margin-top: -40px;
     margin-left: 20px;
+    color: rgb(255, 255, 255);
+
 
 }
 
 .header .h1 {
     font-size: 40px;
     opacity: 1;
+    padding-top: 40px;
+
 }
 
 .h3 {
