--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -8,43 +8,70 @@
     text-align: center;
 }
 
-.body {
-    background-image: url("fotohome1.jpg");
-    background-size: 1380px;
-    opacity: 0.9;
+.body2 {
+
+    background-size: 2000px;
     height: 677px;
-    width: 1280px;
-    margin-left: -38px;
+    background-color: #2d552b;
+}
+
+.bodyhome {
+    background-image: url("fotohome1.jpg");
+    background-size: 2000px;
+    height: 677px;
+    width: 1287px;
+    margin-left: -40px;
     margin-top: -17px;
 
+
+
+
 }
+
+
 
 .button {
     text-align: center;
-    width: 300px;
-    height: 50px;
+    width: 350px;
+    height: 60px;
     justify-content: center;
     align-items: center;
     font-size: 30px;
-    margin-top: 300px;
+    margin-top: 250px;
     background-color: #145712;
-    border-radius: 20px;
+    border-radius: 30px;
     background-position-x: right;
     border: 30px;
     border-color: rgb(248, 248, 248);
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
 
 
 
 
 }
 
+.button :hover {
+    -webkit-transform: scale(1.1);
+    -webkit-transform: translate(0px, -5px) scale(1.1);
+
+}
+
+
+
 .tombol {
-    margin-top: -40px;
-    margin-left: 20px;
+    margin-top: -35px;
+    margin-left: 10px;
     color: rgb(255, 255, 255);
 
 
 }
+
+.button a :hover {
+    color: rgb(129, 255, 150);
+}
+
 
 .header .h1 {
     font-size: 40px;
