--- a/src/Traveling1/Traveling1.css
+++ b/src/Traveling1/Traveling1.css
@@ -1,21 +1,46 @@
 .bodyt1 {
-    justify-content: center;
-    align-items: center;
+
     color: aliceblue;
     text-align: center;
+    background-color: #2d552b;
+    width: 1287px;
 
+    margin-left: -40px;
+    margin-top: -17px;
+    background-size: 2000px;
+
+}
+
+.body2t1 {
+
+    color: aliceblue;
+    text-align: center;
+    background-color: #2d552b;
+    width: 1280px;
+    height: 1800px;
+    margin-top: -17px;
+    background-size: 2000px;
+
+}
+
+.headert1 {
+    margin-left: 40px;
 
 }
 
 .h3t1 {
     font-size: 15px;
     margin-top: -20px;
-
 }
 
-.pt1 {
-    width: max-content;
-    height: max-content;
+.p1t1 {
+    width: 1200px;
+    text-align: justify;
+    line-height: 35px;
+    margin-left: 40px;
+
+
+
 }
 
 .h4t1 {
@@ -23,4 +48,91 @@
     margin-top: 30px;
     color: #ffc400;
 
+}
+
+.fotot11 {
+    background-image: url('foto1.jpg');
+    width: 300px;
+    height: 200px;
+    background-size: 300px;
+    margin-left: 40px;
+}
+
+.fotot12 {
+    background-image: url('foto2.jpg');
+    width: 300px;
+    height: 200px;
+    background-size: 300px;
+    margin-left: 80px;
+    margin-left: 450px;
+    margin-top: -215px;
+}
+
+.fotot13 {
+    background-image: url('foto3.jpg');
+    width: 300px;
+    height: 200px;
+    background-size: 300px;
+    margin-left: 80px;
+    margin-right: 30px;
+    margin-left: 850px;
+    margin-top: -215px;
+}
+
+.fotot14 {
+    background-image: url('foto4.jpg');
+    width: 300px;
+    height: 200px;
+    background-size: 300px;
+    margin-left: 40px;
+
+
+}
+
+.fotot15 {
+    background-image: url('foto5.jpg');
+    width: 300px;
+    height: 200px;
+    background-size: 300px;
+    margin-left: 40px;
+    margin-left: 450px;
+    margin-top: -215px;
+}
+
+.fotot16 {
+    background-image: url('foto6.jpg');
+    width: 300px;
+    height: 200px;
+    background-size: 300px;
+    margin-left: 40px;
+    margin-left: 850px;
+    margin-top: -215px;
+}
+
+.fotot17 {
+    background-image: url('foto7.JPG');
+    width: 300px;
+    height: 200px;
+    background-size: 300px;
+    margin-left: 40px;
+}
+
+.fotot18 {
+    background-image: url('foto8.jpg');
+    width: 300px;
+    height: 200px;
+    background-size: 300px;
+    margin-left: 40px;
+    margin-left: 450px;
+    margin-top: -215px;
+}
+
+.fotot19 {
+    background-image: url('foto9.jpg');
+    width: 300px;
+    height: 200px;
+    background-size: 300px;
+    margin-left: 40px;
+    margin-left: 850px;
+    margin-top: -215px;
 }
